--- a/app/views/transactions/index.html.erb
+++ b/app/views/transactions/index.html.erb
@@ -1,17 +1,11 @@
-<h1>Listing transactions</h1>
+<h1>New expense</h1>
+<%= render 'form' %>
 
+<h1>New income</h1>
+<%= render 'form' %>
+
+<div class="transactions">
 <table>
-  <tr>
-    <th>Date</th>
-    <th>Description</th>
-    <th>Value</th>
-    <th>Amount</th>
-    <th>Category</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
-
 <% @transactions.each do |transaction| %>
   <tr>
     <td><%= transaction.date %></td>
@@ -19,13 +13,12 @@
     <td><%= transaction.value %></td>
     <td><%= transaction.amount %></td>
     <td><%= transaction.category_name %></td>
-    <td><%= link_to 'Show', transaction %></td>
-    <td><%= link_to 'Edit', edit_transaction_path(transaction) %></td>
-    <td><%= link_to 'Destroy', transaction, :confirm => 'Are you sure?', :method => :delete %></td>
+    <td><%= link_to '&#x270D;'.html_safe, edit_transaction_path(transaction) -%>
+    </td>
+    <td><%= link_to '&#x2717;'.html_safe, transaction,
+              :confirm => 'Are you sure?', :method => :delete -%>
+    </td>
   </tr>
 <% end %>
 </table>
-
-<br />
-
-<%= link_to 'New transaction', new_transaction_path %>
+</div>
