--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,8 +2,9 @@
 <html>
 <head>
   <title>Expenses</title>
-  <%= stylesheet_link_tag :all %>
-  <%= javascript_include_tag 'jquery.min', 'rails', 'application' %>
+  <%= stylesheet_link_tag 'jquery-ui', 'expenses' %>
+  <%= javascript_include_tag 'jquery.min', 'jquery-ui.min', 'rails',
+                             'application' %>
   <%= csrf_meta_tag %>
 </head>
 <body>
