--- a/app/views/transactions/index.html.erb
+++ b/app/views/transactions/index.html.erb
@@ -7,16 +7,17 @@
 <div class="transactions">
 <table>
 <% @transactions.each do |transaction| %>
-  <tr>
+  <tr style="background-color: <%= transaction.category.color %>;">
     <td><%= transaction.date %></td>
     <td><%= transaction.description %></td>
     <td><%= transaction.value %></td>
     <td><%= transaction.amount %></td>
     <td><%= transaction.category_name %></td>
-    <td><%= link_to '&#x270D;'.html_safe, edit_transaction_path(transaction) -%>
-    </td>
-    <td><%= link_to '&#x2717;'.html_safe, transaction,
-              :confirm => 'Are you sure?', :method => :delete -%>
+    <td class="buttonset">
+      <a href="<%= url_for edit_transaction_path(transaction) %>"
+        class="button">&#x270D;</a>
+      <a href="<%= url_for transaction %>" data-confirm="Are you sure?"
+        data-method="delete" rel="nofollow" class="button">&#x2717;</a>
     </td>
   </tr>
 <% end %>
