--- a/app/views/transactions/_form.html.erb
+++ b/app/views/transactions/_form.html.erb
@@ -13,20 +13,18 @@
 <tr>
   <td>
     <%= form_for(@transaction) do |f| %>
-    <%= f.text_field :date %>
+    <%= f.text_field :date, :placeholder => Date.today %>
   </td>
-  <td><%= f.text_field :category_name %>
-      <%= f.text_field :description %></td>
-  <td><%= f.text_field :value %></td>
-  <td><%= f.text_field :amount %></td>
+  <td class="main-column">
+    <%= f.text_field :category_name, :placeholder => 'Category' %>
+    <%= f.text_field :description, :placeholder => 'Optional description' %>
+  </td>
+  <td><%= f.text_field :value, :placeholder => '0.00',
+                       :value => @transaction.abs_value %></td>
+  <td><%= f.text_field :amount, :placeholder => '1' %></td>
   <td class="buttonset">
-    <% if @transaction.new_record? %>
-      <%= f.hidden_field :type, :value => "expense" %>
-    <% else %>
-      <%= f.hidden_field :type %>
-    <% end %>
-    <%= f.submit :value => "-", :class => 'button' %>
-    <%= f.submit :value => "+", :class => 'button' %>
+    <%= f.submit :value => "-", :class => "ui-priority-primary" %>
+    <%= f.submit :value => "+" %>
     <% end %>
   </td>
 </tr>
