--- a/app/views/transactions/index.html.erb
+++ b/app/views/transactions/index.html.erb
@@ -1,13 +1,22 @@
 <p id="notice"><%= notice %></p>
 
-<table class="transaction">
+<table class="transactions">
 
 <%= render 'form' %>
 
+<% total = 0; income = 0; expenses = 0 %>
 <% @transactions.each do |transaction| %>
+  <% total += transaction.value %>
+  <% if transaction.type == Transaction::Expense %>
+    <% expenses += transaction.value %>
+  <% else %>
+    <% income += transaction.value %>
+  <% end %>
   <tr>
     <td><%= transaction.date %></td>
-    <td><%= category_label(transaction.category) + transaction.description %></td>
+    <td class="main-column">
+      <%= category_label(transaction.category) + transaction.description %>
+    </td>
     <td><%= value_label transaction %></td>
     <td><%= transaction.amount %></td>
     <td class="buttonset">
@@ -19,4 +28,20 @@
     </td>
   </tr>
 <% end %>
+
+  <tr>
+    <td></td>
+    <td class="right">Total income:</td>
+    <td><%= currency income %></td>
+  </tr>
+  <tr>
+    <td></td>
+    <td class="right">Total expenses:</td>
+    <td><%= currency expenses %></td>
+  </tr>
+  <tr>
+    <td></td>
+    <td class="right">Total:</td>
+    <td><%= currency total %></td>
+  </tr>
 </table>
