--- a/public/stylesheets/expenses.css
+++ b/public/stylesheets/expenses.css
@@ -12,6 +12,13 @@ a.button:visited {
   color: #2779AA;
 }
 
+#notice {
+  padding: 4px 10px;
+  background-color: #e2f9e3;
+  background-image: none;
+  border-color: #99cc99;
+}
+
 /* transaction form */
 #transaction_date {
   width: 8em;
