--- a/app/views/transactions/index.html.erb
+++ b/app/views/transactions/index.html.erb
@@ -16,46 +16,50 @@
 
 <table class="transactions">
 
-<%= render 'form' %>
+  <%= render 'form' %>
 
-<% total = 0; income = 0; expenses = 0 %>
-<% @transactions.each do |transaction| %>
-  <% total += transaction.value %>
-  <% if transaction.type == Transaction::Expense %>
-    <% expenses += transaction.value %>
-  <% else %>
-    <% income += transaction.value %>
+  <% total = 0; income = 0; expenses = 0 %>
+  <% @transactions.each do |transaction| %>
+    <% total += transaction.value %>
+    <% if transaction.type == Transaction::Expense %>
+      <% expenses += transaction.abs_value %>
+    <% else %>
+      <% income += transaction.value %>
+    <% end %>
+    <tr>
+      <td><%= transaction.date %></td>
+      <td class="main-column">
+        <%= category_label(transaction.category) + transaction.description %>
+      </td>
+      <td><%= value_label transaction %></td>
+      <td><%= transaction.amount %></td>
+      <td class="buttonset">
+        <a href="<%= url_for edit_transaction_path(transaction) %>"
+          class="button" title="Edit transaction">&#x270D;</a>
+        <a href="<%= url_for transaction %>" data-confirm="Are you sure?"
+          data-method="delete" rel="nofollow" class="button"
+          title="Delete transaction">&#x2717;</a>
+      </td>
+    </tr>
   <% end %>
-  <tr>
-    <td><%= transaction.date %></td>
-    <td class="main-column">
-      <%= category_label(transaction.category) + transaction.description %>
-    </td>
-    <td><%= value_label transaction %></td>
-    <td><%= transaction.amount %></td>
-    <td class="buttonset">
-      <a href="<%= url_for edit_transaction_path(transaction) %>"
-        class="button" title="Edit transaction">&#x270D;</a>
-      <a href="<%= url_for transaction %>" data-confirm="Are you sure?"
-        data-method="delete" rel="nofollow" class="button"
-        title="Delete transaction">&#x2717;</a>
-    </td>
-  </tr>
-<% end %>
 
   <tr>
     <td></td>
     <td class="right">Total income:</td>
-    <td><%= currency income %></td>
+    <td><%= value_style Transaction::Income, income %></td>
   </tr>
   <tr>
     <td></td>
     <td class="right">Total expenses:</td>
-    <td><%= currency expenses %></td>
+    <td><%= value_style Transaction::Expense, expenses %></td>
   </tr>
   <tr>
     <td></td>
     <td class="right">Total:</td>
-    <td><%= currency total %></td>
+    <% if total >= 0 %>
+      <td><%= value_style Transaction::Income, total %></td>
+    <% else %>
+      <td><%= value_style Transaction::Expense, total.abs %></td>
+    <% end %>
   </tr>
 </table>
