--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -17,5 +17,8 @@
     <%= f.text_field :color %>
     <%= f.submit 'Update', :class => 'button' %>
     <%= link_to "Back", transactions_url, :class => 'button' %>
+    <div id="colorwheel"
+      class="ui-widget ui-widget-content ui-corner-all ui-state-default">
+    </div>
   </div>
 <% end %>
