--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,8 +3,9 @@
 <head>
   <title>Expenses</title>
   <%= stylesheet_link_tag 'jquery-ui', 'expenses' %>
-  <%= javascript_include_tag 'jquery.min', 'jquery-ui.min', 'rails',
-                             'application' %>
+  <%= javascript_include_tag 'jquery.min', 'jquery-ui.min',
+                             'raphael.min', 'colorwheel',
+                             'rails', 'application' %>
   <%= csrf_meta_tag %>
 </head>
 <body>
