--- a/public/stylesheets/expenses.css
+++ b/public/stylesheets/expenses.css
@@ -1,3 +1,8 @@
+body {
+  background-color: #fafafa;
+  height: 100%;
+}
+
 a, a:visited {
   color: #333;
   text-decoration: none;
@@ -21,11 +26,26 @@ a.button:visited {
 
 /* category form */
 #edit_category {
+  position: relative;
   margin-bottom: 30px;
+  font-size: 1.5em;
+}
+
+#edit_category input {
+  font-size: 1.0em;
 }
 
 #category_name {
-  width: 12em;
+  width: 8em;
+}
+
+#category_color {
+  width: 5em;
+}
+
+#colorwheel {
+  position: absolute;
+  display: none;
 }
 
 /* transaction form */
