--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,7 @@
   <%= stylesheet_link_tag 'jquery-ui', 'expenses' %>
   <%= javascript_include_tag 'jquery.min', 'jquery-ui.min',
                              'raphael.min', 'colorwheel',
+                             'g.raphael.min', 'g.pie',
                              'rails', 'application' %>
   <%= csrf_meta_tag %>
 </head>
