--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,12 +2,9 @@
 <html>
 <head>
   <title>Expenses</title>
-  <%= stylesheet_link_tag 'jquery-ui', 'expenses' %>
-  <%= javascript_include_tag 'jquery.min', 'jquery-ui.min',
-                             'raphael.min', 'colorwheel',
-                             'g.raphael.min', 'g.pie',
-                             'rails', 'application' %>
-  <%= csrf_meta_tag %>
+  <%= stylesheet_link_tag    "application" %>
+  <%= javascript_include_tag "application" %>
+  <%= csrf_meta_tags %>
 </head>
 <body>
 
