--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,9 @@
 <head>
   <title>Expenses</title>
   <%= stylesheet_link_tag    "application" %>
+  <!--[if lt IE 8]>
+  <%= stylesheet_link_tag    "blueprint/ie" %>
+  <![endif]-->
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
