--- a/app/assets/stylesheets/expenses.css.scss
+++ b/app/assets/stylesheets/expenses.css.scss
@@ -1,3 +1,5 @@
+@import 'mixins.css.scss';
+
 body {
   background-color: #fafafa;
   height: 100%;
@@ -10,7 +12,7 @@ a, a:visited, a:focus, a:hover {
 
 .content {
   width: 750px;
-  margin: auto;
+  margin: 2em auto;
 }
 
 a.button:visited {
@@ -24,8 +26,19 @@ a.button:visited {
   border-color: #99cc99;
 }
 
+#navigation {
+  text-align: center;
+  font-size: 1.5em;
+  margin-bottom: 2em;
+}
+
+#span_notice {
+  padding: 0.4em 0.5em;
+}
+
 #pie_container {
-  width: 600px;
+  @include border-box;
+  width: 700px;
   margin: 20px auto;
 }
 
@@ -39,6 +52,13 @@ a.button:visited {
 #pie {
   width: 100%;
   height: 350px;
+}
+
+.toolbar {
+  @include border-box;
+  width: 700px;
+  margin: auto;
+  padding: 0.4em 1em;
 }
 
 /* category form */
@@ -132,9 +152,7 @@ td.buttonset {
 }
 
 .ui-button {
-  box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
+  @include border-box;
   min-width: 35px;
   font-weight: normal;
 }
