--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,16 @@
 <body>
 
   <div class="content">
+    <div id="navigation" class="ui-buttonset">
+      <%= navigation_button \
+            text: 'Transactions',
+            path: transactions_path,
+            class: 'ui-corner-left' %>
+      <%= navigation_button \
+            text: 'Pie',
+            path: pie_charts_path,
+            class: 'ui-corner-right' %>
+    </div>
     <%= yield %>
   </div>
 
