--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,10 @@
   <%= stylesheet_link_tag    "blueprint/ie" %>
   <![endif]-->
   <%= javascript_include_tag "application" %>
+  <script type="text/javascript">
+    var all_categories = <%== all_categories.map {|c|
+      {id: c.id, label: c.label, color: c.color} }.to_json %>;
+  </script>
   <%= csrf_meta_tags %>
 </head>
 <body>
