--- a/app/assets/stylesheets/expenses.css.scss
+++ b/app/assets/stylesheets/expenses.css.scss
@@ -122,6 +122,8 @@ a.button:visited {
   display: inline-block;
   padding: 1px 3px;
   margin: 1px 5px;
+  color: #fff !important;
+  text-shadow: -1px 0 #000, 0 1px #000, 1px 0 #000, 0 -1px #000;
 }
 
 .value-style {
@@ -131,6 +133,7 @@ a.button:visited {
 
 td.buttonset {
   width: 75px !important;
+  font-size: 1.3em;
 }
 
 .expense {
