Add trends graph.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,10 @@
             class: 'ui-corner-left' %>
       <%= navigation_button \
             text: 'Pie',
-            path: pie_charts_path,
+            path: pie_charts_path %>
+      <%= navigation_button \
+            text: 'Trends',
+            path: trends_charts_path,
             class: 'ui-corner-right' %>
     </div>
     <%= yield %>
