--- a/app/views/charts/pie.html.erb
+++ b/app/views/charts/pie.html.erb
@@ -30,44 +30,50 @@
   </span>
 </div>
 
-<script type="text/javascript">
-  var pie_categories = <%==
-    @categories.map {|category|
-      {
-        id: category.id,
-        label: category.name,
-        color: category.color,
-        value: @values[category.id].round,
-        percentage: @percentages[category.id].round(4)
-      }
-    }.to_json
-  %>
-</script>
+<% if @transactions.empty? %>
+  <div class="notice ui-widget ui-widget-content ui-state-highlight">
+    No transactions in the selected range.
+  </div>
+<% else %>
+  <script type="text/javascript">
+    var pie_categories = <%==
+      @categories.map {|category|
+        {
+          id: category.id,
+          label: category.name,
+          color: category.color,
+          value: @values[category.id].round,
+          percentage: @percentages[category.id].round(4)
+        }
+      }.to_json
+    %>
+  </script>
 
-<div id="pie_container"
-    class="ui-widget ui-widget-content ui-corner-all ui-state-default">
-    <h1 id="chartTitle">
-      <%= if params[:income] then 'Income' else 'Expenses' end %>
-      by category
-    </h1>
-  <div id="pie"></div>
-</div>
+  <div id="pie_container"
+      class="ui-widget ui-widget-content ui-corner-all ui-state-default">
+      <h1 id="chartTitle">
+        <%= if params[:income] then 'Income' else 'Expenses' end %>
+        by category
+      </h1>
+    <div id="pie"></div>
+  </div>
 
-<table>
-  <tr>
-    <td class="right">Total income:</td>
-    <td>
-      <%= value_style Transaction::Income, @transactions.map(&:income).sum %>
-    </td>
-  </tr>
-  <tr>
-    <td class="right">Total expenses:</td>
-    <td>
-      <%= value_style Transaction::Expense, @transactions.map(&:expense).sum %>
-    </td>
-  </tr>
-  <tr>
-    <td class="right">Total:</td>
-    <td><%= value_label @transactions.map(&:value).sum %></td>
-  </tr>
-</table>
+  <table>
+    <tr>
+      <td class="right">Total income:</td>
+      <td>
+        <%= value_style Transaction::Income, @transactions.map(&:income).sum %>
+      </td>
+    </tr>
+    <tr>
+      <td class="right">Total expenses:</td>
+      <td>
+        <%= value_style Transaction::Expense, @transactions.map(&:expense).sum %>
+      </td>
+    </tr>
+    <tr>
+      <td class="right">Total:</td>
+      <td><%= value_label @transactions.map(&:value).sum %></td>
+    </tr>
+  </table>
+<% end %>
